= 1.1.1 = 
- 1.1.0 commit failed to update on wp.org 

= 1.1.0 =
- Added admin notification for requeesing review our addon.
- Only delete access token when member disconnect.

= 1.0.26 =
- Updated readme file to comply with WordPress.org recommendation to limit plugin tags to 5

= 1.0.25 =
- Update readme file

= 1.0.24 =
- Fixe Pro link in readme file

= 1.0.23 =
- Update the readme file

= 1.0.22 =
- Added the `disable_as_for_roles_management` filter to allow customization of role-based management settings. This filter provides developers the flexibility to disable specific aspects of role management based on custom logic.

= 1.0.21 =
- Updated plugin to support WordPress version 6.5

= 1.0.20 =
- Update Contributors

= 1.0.19 =
- Fixe duplicate bagdes

= 1.0.18 =
- Update the dismissible notification asking for review

= 1.0.17 =
- Add dismissible notification asking for review

= 1.0.16 =
- Update support WordPress 6.3

= 1.0.15 =
- Update user meta 'discord_role_id_for_' when RUN API button

= 1.0.14 =
- Update support WordPress 6.2
- Add Opt-out delete all data associated with the plugin when it is uninstalled.

= 1.0.12 =
- Add link to plugin support forum

= 1.0.11 =
- Add custom message for roles assigned or to be assigned.

= 1.0.10 =
- added visual clues to demonstrate the error connect to bot cases.

= 1.0.9 =
- Fixe Error 10004

= 1.0.8 =
- update the discord roles of members via the 'RUN API' button, Case of an expiated transaction, without waiting for the memberpress cron.

= 1.0.7 =
- Added search field by discord username or discord ID in the members table.
- Show discord role colors in checkout page.

= 1.0.6 =
- Added discord user id inside members table, now it is easy to find users inside server who have updated their usernames.

= 1.0.5 =
- Fixed the action scheduler not not doing re-try

= 1.0.4 =
- Fixed Github Issue #100, Memory exhausting

= 1.0.3 =
- Remove use of font awesome and added discord icon svg.

= 1.0.2 =